recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: ')' expected but ';' found.
		avance(length);
                              ^Tree:11: error: illegal start of simple expression
	else {
        ^Tree:18: error: ')' expected but '}' found.
	}
        ^